[gd_scene load_steps=20 format=3 uid="uid://cyrp51sdsmug"]

[ext_resource type="Script" uid="uid://blc57e1p1nq53" path="res://scripts/hex_room.gd" id="1_4hbrt"]
[ext_resource type="PackedScene" uid="uid://d23pegtrbefue" path="res://scenes/room_elements/wall.tscn" id="2_bl8a7"]
[ext_resource type="PackedScene" uid="uid://cd6euvc8pcasg" path="res://scenes/room_elements/full_wall.tscn" id="3_cb8lo"]
[ext_resource type="PackedScene" uid="uid://dedse6bl0jd5a" path="res://scenes/room_elements/exit_wall.tscn" id="4_knxge"]
[ext_resource type="PackedScene" uid="uid://dkkiqbuhdnqar" path="res://scenes/room_elements/guillotine.tscn" id="7_0ylvw"]
[ext_resource type="Material" uid="uid://ncplgtiws8qq" path="res://materials/wall_material_1.tres" id="7_7ou1p"]
[ext_resource type="PackedScene" uid="uid://bxccq776gy1wp" path="res://scenes/coin.tscn" id="8_eob7v"]
[ext_resource type="PackedScene" uid="uid://cqsuy71dpam6w" path="res://scenes/health_potion.tscn" id="8_k5b0v"]
[ext_resource type="PackedScene" uid="uid://delb0vr0vc0cc" path="res://scenes/room_elements/corridor_slope.tscn" id="8_rfafo"]
[ext_resource type="Material" uid="uid://bf560ha2364y8" path="res://materials/wall_material_0.tres" id="8_sjrt4"]
[ext_resource type="Material" uid="uid://c6n25dcaddypg" path="res://materials/wall_material_2.tres" id="10_hyakg"]
[ext_resource type="ArrayMesh" uid="uid://bnr8ecux6edhl" path="res://meshes/hexes/hex_empty.res" id="10_mhljg"]
[ext_resource type="Material" uid="uid://bdh3gpk7eqkiw" path="res://materials/wall_material_3.tres" id="11_fvq5f"]
[ext_resource type="Material" uid="uid://cat4ifx6ilgi2" path="res://materials/wall_material_4.tres" id="12_4cxwg"]
[ext_resource type="ArrayMesh" uid="uid://bldncfftqdlqh" path="res://meshes/floor.res" id="14_wbxvs"]
[ext_resource type="ArrayMesh" uid="uid://6qfg8qjk2qnc" path="res://meshes/ceiling.res" id="17_n8yq7"]

[sub_resource type="SphereShape3D" id="SphereShape3D_fvjhl"]
radius = 3.55

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_8vi6p"]
rough = true
bounce = 0.25
absorbent = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_frf2h"]
height = 0.5
radius = 3.5

[node name="HexRoom" type="Node3D"]
script = ExtResource("1_4hbrt")
wall_scene = ExtResource("2_bl8a7")
full_collision_scene = ExtResource("3_cb8lo")
exit_collision_scene = ExtResource("4_knxge")
corridor_scene = ExtResource("8_rfafo")
guillotine_scene = ExtResource("7_0ylvw")
coin_scene = ExtResource("8_eob7v")
potion_scene = ExtResource("8_k5b0v")
materials = Array[Material]([ExtResource("8_sjrt4"), ExtResource("7_7ou1p"), ExtResource("10_hyakg"), ExtResource("11_fvq5f"), ExtResource("12_4cxwg")])
object_scenes = Dictionary[int, PackedScene]({
0: ExtResource("8_k5b0v"),
1: ExtResource("8_k5b0v"),
3: ExtResource("8_eob7v")
})

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0)
layers = 2
mesh = ExtResource("10_mhljg")

[node name="Floor" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
layers = 2
mesh = ExtResource("14_wbxvs")

[node name="Ceiling" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 2, 0)
layers = 2
mesh = ExtResource("17_n8yq7")

[node name="EntranceDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 6
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="EntranceDetector"]
shape = SubResource("SphereShape3D_fvjhl")

[node name="StaticBody3D" type="AnimatableBody3D" parent="."]
collision_layer = 8
collision_mask = 6
physics_material_override = SubResource("PhysicsMaterial_8vi6p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
shape = SubResource("CylinderShape3D_frf2h")

[node name="Coins" type="Node3D" parent="."]

[node name="Corridors" type="Node3D" parent="."]

[connection signal="body_entered" from="EntranceDetector" to="." method="_on_entrance_detector_body_entered"]
